--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     </div>
 
     <script>
-        // 简单处理：直接关闭页面返回应用
+        // 跳转回应用
+        window.location.href = "obbw://";
+        // 备用关闭（可能不生效）
         setTimeout(() => {
             window.close();
         }, 1000);
