--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
     </div>
 
     <script>
-        // 跳转回应用
-        window.location.href = "obbw://";
-        // 备用关闭（可能不生效）
-        setTimeout(() => {
-            window.close();
-        }, 1000);
+    // 获取 URL 上的 code 参数
+    const urlParams = new URLSearchParams(window.location.search);
+    const code = urlParams.get("code");
+
+    if (code) {
+        // 重定向到你 App 的 scheme，例如 bwapp://tiktok_auth?code=xxx
+        window.location.href = "bwapp://tiktok_auth?code=" + code;
+    } else {
+        document.body.innerHTML = "<h2>登录失败，没有拿到 code</h2>";
+    }
     </script>
 </body>
 </html>
